// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The render group component Rendering with fields Does not error when passed empty array of fields 1`] = `
<div
  className=""
/>
`;

exports[`The render group component Rendering with fields Works with a few fields 1`] = `
<div
  className=""
>
  <div
    className="caldera-config-group"
  >
    <label
      htmlFor="cf-something-apikey"
    >
      API Key
    </label>
    <input
      aria-describedby={null}
      className="field-config"
      id="cf-something-apikey"
      onChange={[Function]}
      required={false}
      type="text"
      value={undefined}
    />
  </div>
  <div
    className="caldera-config-group"
  >
    <input
      aria-describedby={null}
      className="field-config"
      id="cf-something-sequence-id"
      onChange={[Function]}
      required={false}
      type="hidden"
      value={undefined}
    />
  </div>
  <div
    className="caldera-config-group"
  >
    <label
      htmlFor="cf-something-tags"
    >
      Tags
    </label>
    <input
      aria-describedby={null}
      className="field-config"
      id="cf-something-tags"
      onChange={[Function]}
      required={false}
      type="text"
      value={undefined}
    />
  </div>
</div>
`;

exports[`The render group component Rendering with fields Works with one text field 1`] = `
<div
  className=""
>
  <div
    className="caldera-config-group"
  >
    <label
      htmlFor="sz"
    >
      Tags
    </label>
    <input
      aria-describedby={null}
      className="field-config"
      id="sz"
      onChange={[Function]}
      required={false}
      type="text"
      value={undefined}
    />
  </div>
</div>
`;
